--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -38,11 +38,11 @@ Once you have created a corresponding event, you are now ready to create and iss
             </Frame>
         </Tab>
         <Tab title="Ticket Image">
-            <Frame caption="Where customers will see the ticket image when checking out">
+            <Frame caption="Where customers will see the ticket image during checkout">
                 <img src="/images/creating-campaign/ticketing/creating tickets/Tix Img Checkout.png"/>
             </Frame>
 
-            <Frame caption="Where customers will see the ticket image in the email confirmation message">
+            <Frame caption="Where customers will see the ticket image in their ticket confirmation email">
                 <img src="/images/creating-campaign/ticketing/creating tickets/Tix Img Email.png"/>
             </Frame>
         </Tab>
