Gating membership complete

--- a/creating-campaign/membership/creatememtier.mdx
+++ b/creating-campaign/membership/creatememtier.mdx
@@ -6,7 +6,7 @@ title: 'Implementing Membership Tiers'
         <img src="/images/creating-campaign/membership/creating tier/Tier Button Location.png"/>
     </Step>
     <Step title="Click 'Add Tier'">
-        <img src="/images/creating-campaign/membership/creating tier/Add Tier Button Location.png"/>
+        <img src="/images/creating-campaign/membership/creating tier/Add Tier Button Location.webp"/>
     </Step>
     <Step title="Add Membership Tier Name/Type">
         Enter the name or tier (superfan, VIP, etc) for this membership type. Additional tiers can always be added to your membership program later.
@@ -17,12 +17,6 @@ title: 'Implementing Membership Tiers'
         <Warning>
             Updates made to the "Membership Tier Name" field may not automatically appear on NFT marketplaces for NFTs that have already been minted. To ensure the latest metadata is displayed, manually refresh the NFT metadata on the respective marketplaces.
         </Warning>
-        <Tabs>
-            <Tab title="Membership Tier Description">
-            </Tab>
-            <Tab title="Membership Tier Image">
-            </Tab>
-        </Tabs>
     </Step>
     <Step title="Add Membership Tier Image and Description">
         Upload an image and a brief description for this membership tier.
@@ -46,12 +40,12 @@ title: 'Implementing Membership Tiers'
     <Step title="Specify Membership Tier Price">
         Enter the desired price for this membership tier.
             <img src="/images/creating-campaign/membership/creating tier/Add Tix Price.png"/>
-        <Info>
+        <Tip>
             Set the price to 0 if the membership tier is free to join.
-        </Info>
-        <Info>
+        </Tip>
+        <Tip>
             To change the currency type, return to "① Info" in the sidebar and change the value in the "Currency" field.
-        </Info>
+        </Tip>
     </Step>
     <Step title="Specify Advanced Options (Optional)">
         If applicable, specify the maximum number of available memberships within this tier, as well as whether this tier should be invisible to users on the membership information page.
