--- a/creating-campaign/ticketing/gating.mdx
+++ b/creating-campaign/ticketing/gating.mdx
@@ -23,7 +23,7 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
                     <Step title="Select the target event/membership program from the 'NFT Collection' field.">
                     </Step>
                     <Step title="Select the target ticket/membership tier from the 'Type' field.">
-                        Select "All Tier" if you do not want to gate by ticket/membership tier (i.e ticket will be available to holders of a ticket of any type from the specified event/membership of any tier from the specified membership program.)
+                        Select "All Tier" if you do not want to gate by ticket/membership tier (i.e ticket type will be available to all ticket holders from the specified event/all members of the specified membership program.)
                     </Step>
                 </Steps>
             </Accordion>
