--- a/distribution/discountpromocodes.mdx
+++ b/distribution/discountpromocodes.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Discount & Promo Codes'
+title: 'Discount and Promo Codes'
 ---
 
 Please note that the process of creating and implementing discounts and promo codes is identical for both tickets and memberships.
