--- a/creating-campaign/ticketing/inviteonly.mdx
+++ b/creating-campaign/ticketing/inviteonly.mdx
@@ -2,7 +2,9 @@
 title: 'Invite-Only Tickets'
 ---
 
-<img src="/images/creating-campaign/ticketing/inviteonly/using code tix.gif"/>
+<Frame>
+    <img src="/images/creating-campaign/ticketing/inviteonly/using code tix.gif"/>
+</Frame>
 Tickets can be locked so that only users who hold a specified promo code can purchase them.
 
 <Steps>
