--- a/creating-campaign/ticketing/inviteonly.mdx
+++ b/creating-campaign/ticketing/inviteonly.mdx
@@ -1,10 +1,11 @@
 ---
 title: 'Invite-Only Tickets'
 ---
-
-<Frame>
-    <img src="/images/creating-campaign/ticketing/inviteonly/using code tix.gif"/>
-</Frame>
+<Center>
+    <Frame>
+        <img src="/images/creating-campaign/ticketing/inviteonly/using code tix.gif"/>
+    </Frame>
+</Center>
 Tickets can be locked so that only users who hold a specified promo code can purchase them.
 
 <Steps>
