Fixed inviteonly image, added inviteonly for memberships, re-adding discountpromocode

--- a/creating-campaign/ticketing/inviteonly.mdx
+++ b/creating-campaign/ticketing/inviteonly.mdx
@@ -1,11 +1,8 @@
 ---
 title: 'Invite-Only Tickets'
 ---
-<Center>
-    <Frame>
-        <img src="/images/creating-campaign/ticketing/inviteonly/using code tix.gif"/>
-    </Frame>
-</Center>
+
+<img src="/images/creating-campaign/ticketing/inviteonly/using code tix.gif"/>
 Tickets can be locked so that only users who hold a specified promo code can purchase them.
 
 <Steps>
@@ -15,7 +12,7 @@ Tickets can be locked so that only users who hold a specified promo code can pur
     </Step>
     <Step title="Create Code'">
         <Info>
-            For detailed instructions on how to create a promo code, please refer to our tutorial here. Both manually and bulk generated codes can be created for invite-only tickets.
+            For detailed instructions on how to create a promo code, please refer to our [tutorial here](/distribution/discountpromocode). Both manually and bulk generated codes can be created for invite-only tickets.
         </Info>
         Ensure that your code applies to the target ticket type. Click "Add" and then "Update" in the sidebar when complete. The promo code is now activated.
         <img src="/images/creating-campaign/ticketing/inviteonly/creating code.gif"/>
