--- a/distribution/discountpromocode.mdx
+++ b/distribution/discountpromocode.mdx
@@ -3,7 +3,7 @@ title: 'Discount and Promo Codes'
 ---
 
 Please note that the process of creating and implementing discounts and promo codes is identical for both tickets and memberships.
-a
+
 <Steps>
     <Step title="Sign into the Moongate Merchant Portal">
         [https://portal.moongate.id/](https://portal.moongate.id/)
@@ -12,56 +12,56 @@ a
     </Step>
     <Step title="Navigate to the Discount & Codes Tab">
         Go to the "③ Tickets" or "③ Tiers" page within the chosen event/membership page respectively, and then click on the "Discount & Codes" tab. From here you can add new time-based discounts and promo codes.
-        
+        <img src="/"/>
     </Step>
     <Step title="Add a Time-based Discount/Promo Code">
         <AccordionGroup>
             <Accordion title =Time-based Discount">
                 <Steps>
                     <Step title="">
-                        
+                        <img src="/"/>
                     </Step>
                     <Step title="">
-                        
+                        <img src="/"/>
                     </Step>
                     <Step title="">
-                        
+                        <img src="/"/>
                     </Step>
                     <Step title="">
-                        
+                        <img src="/"/>
                     </Step>
                     <Step title="">
-                        
+                        <img src="/"/>
                     </Step>
                 </Steps>
                 The promotional period can be cut short by deleting the discount from the ticket type/membership tier. From the Discount & Codes Tab, click the action button for the target time-based discount, "Edit", and then "Delete" on the following window.
-                
+                <img src="/"/>
             </Accordion>
             <Accordion title ="Promo Code">
                 <Step title="">
-                    
+                    <img src="/"/>
                 </Step>
                 <Step title="">
-                    
+                    <img src="/"/>
                 </Step>
                 <Step title="">
-                    
+                    <img src="/"/>
                 </Step>
                 <Step title="">
                     <AccordionGroup>
                         <Accordion title="Manual">
-                            
+                            <img src="/"/>
                         </Accordion>
                         <Accordion title="Bulk Generate">
-                            
+                            <img src="/"/>
                         </Accordion>
                     </AccordionGroup>
                 </Step>
                 <Step title="">
-                    
+                    <img src="/"/>
                 </Step>
             </Accordion>
         </AccordionGroup>
-        
+        <img src="/"/>
     </Step>
 </Steps>
