--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -1,3 +1,69 @@
 ---
 title: 'Airdropping'
 ---
+
+Please note that the process of creating and implementing discounts and promo codes is identical for both tickets and memberships.
+
+A
+
+<Steps>
+    <Step title="Sign into the Moongate Merchant Portal">
+        [https://portal.moongate.id/](https://portal.moongate.id/)
+    </Step>
+    <Step title="Navigate to the Target Event or Membership Page">
+    </Step>
+    <Step title="Navigate to the Discount & Codes Tab">
+        Go to the "③ Tickets" or "③ Tiers" page within the chosen event/membership page respectively, and then click on the "Discount & Codes" tab. From here you can add new time-based discounts and promo codes.
+        
+    </Step>
+    <Step title="Add a Time-based Discount/Promo Code">
+        <AccordionGroup>
+            <Accordion title =Time-based Discount">
+                <Steps>
+                    <Step title="">
+                        
+                    </Step>
+                    <Step title="">
+                        
+                    </Step>
+                    <Step title="">
+                        
+                    </Step>
+                    <Step title="">
+                        
+                    </Step>
+                    <Step title="">
+                        
+                    </Step>
+                </Steps>
+                The promotional period can be cut short by deleting the discount from the ticket type/membership tier. From the Discount & Codes Tab, click the action button for the target time-based discount, "Edit", and then "Delete" on the following window.
+                
+            </Accordion>
+            <Accordion title ="Promo Code">
+                <Step title="">
+                    
+                </Step>
+                <Step title="">
+                    
+                </Step>
+                <Step title="">
+                    
+                </Step>
+                <Step title="">
+                    <AccordionGroup>
+                        <Accordion title="Manual">
+                            
+                        </Accordion>
+                        <Accordion title="Bulk Generate">
+                            
+                        </Accordion>
+                    </AccordionGroup>
+                </Step>
+                <Step title="">
+                    
+                </Step>
+            </Accordion>
+        </AccordionGroup>
+        
+    </Step>
+</Steps>
