--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -5,3 +5,11 @@ title: 'Airdropping'
 Please note that the process of creating and implementing discounts and promo codes is identical for both tickets and memberships.
 
 A
+
+<Steps>
+    <Step title="Sign into the Moongate Merchant Portal">
+        [https://portal.moongate.id/](https://portal.moongate.id/)
+    </Step>
+    <Step title="Navigate to the Target Event or Membership Page">
+    </Step>
+</Steps>
