--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -12,4 +12,8 @@ A
     </Step>
     <Step title="Navigate to the Target Event or Membership Page">
     </Step>
+    <Step title="Navigate to the Discount & Codes Tab">
+        Go to the "③ Tickets" or "③ Tiers" page within the chosen event/membership page respectively, and then click on the "Discount & Codes" tab. From here you can add new time-based discounts and promo codes.
+        <img src="/"/>
+    </Step>
 </Steps>
