Please work please

--- a/distribution/discountpromocode.mdx
+++ b/distribution/discountpromocode.mdx
@@ -18,36 +18,35 @@ Please note that the process of creating and implementing discounts and promo co
         <AccordionGroup>
             <Accordion title =Time-based Discount">
                 <Steps>
-                    <Step title="">
+                    <Step title="Click 'Add New'">
                         <img src="/"/>
                     </Step>
-                    <Step title="">
+                    <Step title="Select a Ticket Type/Membership Tier to Discount">
                         <img src="/"/>
                     </Step>
-                    <Step title="">
+                    <Step title="Set the Discounted Price">
                         <img src="/"/>
                     </Step>
-                    <Step title="">
+                    <Step title="Set the Discount End Date">
                         <img src="/"/>
                     </Step>
-                    <Step title="">
+                    <Step title="(Optional) Prematurely End Discount Period">
                         <img src="/"/>
+                        The promotional period can be cut short by deleting the discount from the ticket type/membership tier. From the Discount & Codes Tab, click the action button for the target time-based discount, "Edit", and then "Delete" on the following window.
                     </Step>
                 </Steps>
-                The promotional period can be cut short by deleting the discount from the ticket type/membership tier. From the Discount & Codes Tab, click the action button for the target time-based discount, "Edit", and then "Delete" on the following window.
-                <img src="/"/>
             </Accordion>
             <Accordion title ="Promo Code">
-                <Step title="">
+                <Step title="Click 'Add New'">
                     <img src="/"/>
                 </Step>
-                <Step title="">
+                <Step title="Select a Ticket Type/Membership Tier to Discount">
                     <img src="/"/>
                 </Step>
-                <Step title="">
+                <Step title="Enter a Discount %">
                     <img src="/"/>
                 </Step>
-                <Step title="">
+                <Step title="Manually Generate or Bulk Generate Promo Codes">
                     <AccordionGroup>
                         <Accordion title="Manual">
                             <img src="/"/>
@@ -57,8 +56,10 @@ Please note that the process of creating and implementing discounts and promo co
                         </Accordion>
                     </AccordionGroup>
                 </Step>
-                <Step title="">
+                <Step title="(Optional) Create a Direct Discount Code Link">
                     <img src="/"/>
+                </Step>
+                <Step title="Deleting Promo Codes">
                 </Step>
             </Accordion>
         </AccordionGroup>
