--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -17,3 +17,66 @@ A
         <img src="/"/>
     </Step>
 </Steps>
+
+<Steps>
+    <Step title="Sign into the Moongate Merchant Portal">
+        [https://portal.moongate.id/](https://portal.moongate.id/)
+    </Step>
+    <Step title="Navigate to the Target Event or Membership Page">
+    </Step>
+    <Step title="Navigate to the Discount & Codes Tab">
+        Go to the "③ Tickets" or "③ Tiers" page within the chosen event/membership page respectively, and then click on the "Discount & Codes" tab. From here you can add new time-based discounts and promo codes.
+        <img src="/"/>
+    </Step>
+    <Step title="Add a Time-based Discount/Promo Code">
+        <AccordionGroup>
+            <Accordion title =Time-based Discount">
+                <Steps>
+                    <Step title="Click 'Add New'">
+                        <img src="/"/>
+                    </Step>
+                    <Step title="Select a Ticket Type/Membership Tier to Discount">
+                        <img src="/"/>
+                    </Step>
+                    <Step title="Set the Discounted Price">
+                        <img src="/"/>
+                    </Step>
+                    <Step title="Set the Discount End Date">
+                        <img src="/"/>
+                    </Step>
+                    <Step title="(Optional) Prematurely End Discount Period">
+                        <img src="/"/>
+                        The promotional period can be cut short by deleting the discount from the ticket type/membership tier. From the Discount & Codes Tab, click the action button for the target time-based discount, "Edit", and then "Delete" on the following window.
+                    </Step>
+                </Steps>
+            </Accordion>
+            <Accordion title ="Promo Code">
+                <Step title="Click 'Add New'">
+                    <img src="/"/>
+                </Step>
+                <Step title="Select a Ticket Type/Membership Tier to Discount">
+                    <img src="/"/>
+                </Step>
+                <Step title="Enter a Discount %">
+                    <img src="/"/>
+                </Step>
+                <Step title="Manually Generate or Bulk Generate Promo Codes">
+                    <AccordionGroup>
+                        <Accordion title="Manual">
+                            <img src="/"/>
+                        </Accordion>
+                        <Accordion title="Bulk Generate">
+                            <img src="/"/>
+                        </Accordion>
+                    </AccordionGroup>
+                </Step>
+                <Step title="(Optional) Create a Direct Discount Code Link">
+                    <img src="/"/>
+                </Step>
+                <Step title="Deleting Promo Codes">
+                </Step>
+            </Accordion>
+        </AccordionGroup>
+        <img src="/"/>
+    </Step>
+</Steps>
