This should work

--- a/creating-campaign/ticketing/createevent.mdx
+++ b/creating-campaign/ticketing/createevent.mdx
@@ -46,6 +46,6 @@ Before you can create and issue tickets, you must first create a corresponding e
             <img src="/images/creating-campaign/ticketing/creating an event/Socials Location.png"/>
         </Tab>
     </Tabs>
-        When you are ready, scroll to the end of the page and click 'Next'. You are now ready to [create tickets](createtickets.mdx)!
+        When you are ready, scroll to the end of the page and click 'Next'. You are now ready to [create tickets](/creating-campaign/ticketing/createtickets)!
   </Step>
 </Steps>
