--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -30,7 +30,7 @@ A
     </Step>
     <Step title="Add a Time-based Discount/Promo Code">
         <AccordionGroup>
-            <Accordion title =Time-based Discount">
+            <Accordion title ="Time-based Discount">
                 <Steps>
                     <Step title="Click 'Add New'">
                         <img src="/"/>
