Hooray it worked!

--- a/distribution/discountpromocode.mdx
+++ b/distribution/discountpromocode.mdx
@@ -16,7 +16,7 @@ Please note that the process of creating and implementing discounts and promo co
     </Step>
     <Step title="Add a Time-based Discount/Promo Code">
         <AccordionGroup>
-            <Accordion title =Time-based Discount">
+            <Accordion title ="Time-based Discount">
                 <Steps>
                     <Step title="Click 'Add New'">
                         <img src="/"/>
