--- a/distribution/discountpromocode.mdx
+++ b/distribution/discountpromocode.mdx
@@ -19,6 +19,7 @@ Please note that the process of creating and implementing discounts and promo co
             <Accordion title ="Time-based Discount">
                 <Steps>
                     <Step title="Click 'Add New'">
+                        <img src="/images/creating-campaign/membership/creating program/Add Membership Details.webp"/>
                         <img src="/images/distribution/discount-promo-codes/time based discount/add discount.png"/>
                     </Step>
                     <Step title="Select a Ticket Type/Membership Tier to Discount">
