--- a/distribution/discountpromocode.mdx
+++ b/distribution/discountpromocode.mdx
@@ -4,6 +4,8 @@ title: 'Discount and Promo Codes'
 
 Please note that the process of creating and implementing discounts and promo codes is identical for both tickets and memberships.
 
+<img src="/images/creating-campaign/membership/creating program/Add Membership Details.webp"/>
+
 <Steps>
     <Step title="Sign into the Moongate Merchant Portal">
         [https://portal.moongate.id/](https://portal.moongate.id/)
