--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -54,7 +54,7 @@ B
                     In the following window, select the ticket type/membership tier to apply a discount to.
                     <img src="/images/distribution/discount-promo-codes/promo code/select tier.webp"/>
                 </Step>
-                <Step title="Enter a Discount %">
+                <Step title="Enter a Discount Percentage">
                     <img src="/images/distribution/discount-promo-codes/promo code/set discount.png"/>
                 </Step>
                 <Step title="Manually Generate or Bulk Generate Promo Codes">
