--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -47,37 +47,39 @@ B
                 </Steps>
             </Accordion>
             <Accordion title ="Promo Code">
-                <Step title="Click 'Add New'">
+                <Steps>
+                    <Step title="Click 'Add New'">
                     <img src="/images/distribution/discount-promo-codes/promo code/add code.png"/>
-                </Step>
-                <Step title="Select a Ticket Type/Membership Tier to Discount">
-                    In the following window, select the ticket type/membership tier to apply a discount to.
-                    <img src="/images/distribution/discount-promo-codes/promo code/select tier.webp"/>
-                </Step>
-                <Step title="Enter a Discount Percentage">
-                    <img src="/images/distribution/discount-promo-codes/promo code/set discount.png"/>
-                </Step>
-                <Step title="Manually Generate or Bulk Generate Promo Codes">
-                    If you are adding a small number of codes or your campaign requires a specific promotional code, select "Manual." Otherwise, select "Bulk Generate" to automatically generate codes.
-                    <AccordionGroup>
-                        <Accordion title="Manual">
-                            Enter the desired promo code. If applicable, add a maximum number of times that the code can be used by clicking the "Usage Limit" toggle and entering the quantity. Click "Add" when complete. The promo code is now activated.
-                            <img src="/images/distribution/discount-promo-codes/promo code/manual.webp"/>
-                        </Accordion>
-                        <Accordion title="Bulk Generate">
-                            Enter the desired quantity of promo codes to be randomly generated. If applicable, add a maximum number of times that each code can be used by clicking the "Usage Limit" toggle and entering the quantity. Click "Add" when complete. The promo code is now activated.
-                            <img src="/images/distribution/discount-promo-codes/promo code/bulk gen.png"/>
-                        </Accordion>
-                    </AccordionGroup>
-                </Step>
-                <Step title="(Optional) Create a Direct Discount Code Link">
-                    Customers can be sent directly to the checkout page with a discount code already applied to their cart. To do so, simply append /checkout?code={your-discount-code} to the back of your event's URL, where {your-discount-code}is a valid and currently active discount code.
-                    <img src="/images/distribution/discount-promo-codes/promo code/direct discount link.gif"/>
-                    An example URL would be formatted as follows: https://app.moongate.id/events/moongatedemo/checkout?code=placeholder-code.
-                </Step>
-                <Step title="Deleting Promo Codes">
-                    From the Discount & Codes Tab, click the action button for the target discount code, "Delete," and then "Confirm" on the following window.
-                    <img src="/images/distribution/discount-promo-codes/promo code/delete promo code.gif"/>
-                </Step>
+                    </Step>
+                    <Step title="Select a Ticket Type/Membership Tier to Discount">
+                        In the following window, select the ticket type/membership tier to apply a discount to.
+                        <img src="/images/distribution/discount-promo-codes/promo code/select tier.webp"/>
+                    </Step>
+                    <Step title="Enter a Discount Percentage">
+                        <img src="/images/distribution/discount-promo-codes/promo code/set discount.png"/>
+                    </Step>
+                    <Step title="Manually Generate or Bulk Generate Promo Codes">
+                        If you are adding a small number of codes or your campaign requires a specific promotional code, select "Manual." Otherwise, select "Bulk Generate" to automatically generate codes.
+                        <AccordionGroup>
+                            <Accordion title="Manual">
+                                Enter the desired promo code. If applicable, add a maximum number of times that the code can be used by clicking the "Usage Limit" toggle and entering the quantity. Click "Add" when complete. The promo code is now activated.
+                                <img src="/images/distribution/discount-promo-codes/promo code/manual.webp"/>
+                            </Accordion>
+                            <Accordion title="Bulk Generate">
+                                Enter the desired quantity of promo codes to be randomly generated. If applicable, add a maximum number of times that each code can be used by clicking the "Usage Limit" toggle and entering the quantity. Click "Add" when complete. The promo code is now activated.
+                                <img src="/images/distribution/discount-promo-codes/promo code/bulk gen.png"/>
+                            </Accordion>
+                        </AccordionGroup>
+                    </Step>
+                    <Step title="(Optional) Create a Direct Discount Code Link">
+                        Customers can be sent directly to the checkout page with a discount code already applied to their cart. To do so, simply append /checkout?code={your-discount-code} to the back of your event's URL, where {your-discount-code}is a valid and currently active discount code.
+                        <img src="/images/distribution/discount-promo-codes/promo code/direct discount link.gif"/>
+                        An example URL would be formatted as follows: https://app.moongate.id/events/moongatedemo/checkout?code=placeholder-code.
+                    </Step>
+                    <Step title="Deleting Promo Codes">
+                        From the Discount & Codes Tab, click the action button for the target discount code, "Delete," and then "Confirm" on the following window.
+                        <img src="/images/distribution/discount-promo-codes/promo code/delete promo code.gif"/>
+                    </Step>
+                </Steps>
             </Accordion>
         </AccordionGroup>
