--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -20,6 +20,28 @@ B
     <Step title="Add a Time-based Discount/Promo Code">
         <AccordionGroup>
         <Accordion title="Time-based Discount">
+            <Steps>
+                    <Step title="Click 'Add New'">
+                        <img src="/images/creating-campaign/membership/creating program/Add Membership Details.webp"/>
+                        <img src="/images/distribution/discount-promo-codes/time based discount/add discount.png"/>
+                    </Step>
+                    <Step title="Select a Ticket Type/Membership Tier to Discount">
+                        In the following window, select the ticket type/membership tier to apply a discount to.
+                        <img src="/images/distribution/discount-promo-codes/time based discount/select tier.webp"/>
+                    </Step>
+                    <Step title="Set the Discounted Price">
+                        <img src="/images/distribution/discount-promo-codes/time based discount/set price.webp"/>
+                    </Step>
+                    <Step title="Set the Discount End Date">
+                        Click the calendar icon in the "End Date" field to open the date picker. Select a date for the discount period to end. The discount period will run from the current date to the selected date.
+                        <img src="/images/distribution/discount-promo-codes/time based discount/set end date.png"/>
+                        Click "Add" when complete. Your discount period is now in effect until the selected date.
+                    </Step>
+                    <Step title="(Optional) Prematurely End Discount Period">
+                        <img src="/images/distribution/discount-promo-codes/time based discount/delete time based discount.gif"/>
+                        The promotional period can be cut short by deleting the discount from the ticket type/membership tier. From the Discount & Codes Tab, click the action button for the target time-based discount, "Edit", and then "Delete" on the following window.
+                    </Step>
+                </Steps>
         </Accordion>
         <Accordion title="Promo Code">
         </Accordion>
