--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -57,9 +57,10 @@ B
                                 </Accordion>
                             </AccordionGroup>
                     </Step>
+                    <Step title="another">
+                    </Step>
                 </Steps>
             </Accordion>
         </AccordionGroup>
     </Step>
 </Steps>
-
