--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -45,22 +45,20 @@ B
             </Accordion>
             <Accordion title="Promo Code">
                 <Steps>
-                    <Step title="test">
-                        <AccordionGroup>
-                                <Accordion title="Manual">
-                                    Enter the desired promo code. If applicable, add a maximum number of times that the code can be used by clicking the "Usage Limit" toggle and entering the quantity. Click "Add" when complete. The promo code is now activated.
-                                    <img src="/images/distribution/discount-promo-codes/promo code/manual.webp"/>
-                                </Accordion>
-                                <Accordion title="Bulk Generate">
-                                    Enter the desired quantity of promo codes to be randomly generated. If applicable, add a maximum number of times that each code can be used by clicking the "Usage Limit" toggle and entering the quantity. Click "Add" when complete. The promo code is now activated.
-                                    <img src="/images/distribution/discount-promo-codes/promo code/bulk gen.png"/>
-                                </Accordion>
-                            </AccordionGroup>
+                    <Step title="Click 'Add New'">
+                        <img src="/images/distribution/discount-promo-codes/promo code/add code.png"/>
                     </Step>
-                    <Step title="another">
+                    <Step title="Select a Ticket Type/Membership Tier to Discount">
+                        In the following window, select the ticket type/membership tier to apply a discount to.
+                        <img src="/images/distribution/discount-promo-codes/promo code/select tier.webp"/>
                     </Step>
+                    <Step title="Enter a Discount Percentage">
+                        <img src="/images/distribution/discount-promo-codes/promo code/set discount.png"/>
+                    </Step>
+                    
                 </Steps>
             </Accordion>
         </AccordionGroup>
     </Step>
 </Steps>
+
