--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -72,7 +72,11 @@ B
                         From the Discount & Codes Tab, click the action button for the target discount code, "Delete," and then "Confirm" on the following window.
                         <img src="/images/distribution/discount-promo-codes/promo code/delete promo code.gif"/>
                     </Step>
-                    
+                    <Step title="(Optional) Create a Direct Discount Code Link">
+                        
+                        <img src="/images/distribution/discount-promo-codes/promo code/direct discount link.gif"/>
+                        An example URL would be formatted as follows: https://app.moongate.id/events/moongatedemo/checkout?code=placeholder-code.
+                    </Step>
                 </Steps>
             </Accordion>
         </AccordionGroup>
