--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -74,7 +74,7 @@ B
                     </Step>
                     <Step title="(Optional) Create a Direct Discount Code Link">
                         <img src="/images/distribution/discount-promo-codes/promo code/direct discount link.gif"/>
-                        Customers can be sent directly to the checkout page with a discount code already applied to their cart. To do so, simply append "/checkout?code={your-discount-code}" to the back of your event's URL, where "{your-discount-code}" is a valid and currently active discount code.
+                        Customers can be sent directly to the checkout page with a discount code already applied to their cart. To do so, simply append "/checkout?code=(your-discount-code)" to the back of your event's URL, where "(your-discount-code)" is a valid and currently active discount code.
                         An example URL would be formatted as follows: https://app.moongate.id/events/moongatedemo/checkout?code=placeholder-code.
                     </Step>
                 </Steps>
