--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -1,3 +1,49 @@
 ---
 title: 'Airdropping'
 ---
+
+Airdropping refers to the distribution of a free NFT to a targeted audience. Moongate supports airdropping via email addresses.
+
+Please note that the airdropping process is identical for both tickets and memberships.
+
+<Steps>
+    <Step title="Sign into the Moongate Merchant Portal">
+        [https://portal.moongate.id/](https://portal.moongate.id/)
+    </Step>
+    <Step title="Navigate to the Target Event or Membership Page">
+    </Step>
+    <Step title="Choose the Ticket or Membership Tier to be Airdropped">
+        Go to the "③ Tickets" or "③ Tiers" page within the chosen event/membership page respectively, and locate the ticket type or membership tier that you want to airdrop.
+        
+        Please note that airdropping a ticket/membership enables the recipient(s) to claim it for free, regardless of whether the ticket/membership is paid or not. If your application still requires recipients to pay, we recommend gating by NFT/Email/Wallet instead.
+    </Step>
+    <Step title="Choose an Airdropping Method">
+        Click the "Airdrop" button on the target ticket type/membership tier.
+        
+        Select "Upload .CSV" if there are a large number of people that you will be airdropping the ticket/membership to, and "Manual" for a smaller quantity.
+        <AccordionGroup>
+            <Accordion title="CSV (Bulk Import)">
+                <Steps>
+                    <Step title="Download the CSV template">
+                    </Step>
+                    <Step title="Add Recipients">
+                    </Step>
+                    <Step title="Upload the CSV">
+                    </Step>
+                    <Step title="Confirm Recipient Addresses">
+                    </Step>
+                    <Step title="Confirm Successful Import">
+                    </Step>
+                </Steps>
+            </Accordion>
+            <Accordion title="Manual">
+                <Step title="Add Recipients">
+                </Step>
+                <Step title="Confirm Recipient Addresses">
+                </Step>
+                <Step title="Confirm Successful Import">
+                </Step>
+            </Accordion>
+        </AccordionGroup>
+    </Step>
+</Steps>
