Missing tag added

--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -37,12 +37,14 @@ Please note that the airdropping process is identical for both tickets and membe
                 </Steps>
             </Accordion>
             <Accordion title="Manual">
-                <Step title="Add Recipients">
-                </Step>
-                <Step title="Confirm Recipient Addresses">
-                </Step>
-                <Step title="Confirm Successful Import">
-                </Step>
+                <Steps>
+                    <Step title="Add Recipients">
+                    </Step>
+                    <Step title="Confirm Recipient Addresses">
+                    </Step>
+                    <Step title="Confirm Successful Import">
+                    </Step>
+                </Steps>                
             </Accordion>
         </AccordionGroup>
     </Step>
